--- a/assets/css/ie9.css
+++ b/assets/css/ie9.css
@@ -1,41 +1,40 @@
 /*
-	Multiverse by HTML5 UP
+	Phantom by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/* Panel */
+/* Tiles */
 
-	.panel > .inner.split:after {
-		clear: both;
+	.tiles:after {
 		content: '';
 		display: block;
-	}
-
-	.panel > .inner.split > div {
-		float: left;
-		margin-left: 0;
-		padding-left: 0;
-	}
-
-	.panel > .inner.split > :first-child {
-		padding-left: 0;
-	}
-
-/* Wrapper */
-
-	#wrapper:before {
-		display: none;
-	}
-
-/* Main */
-
-	#main:after {
 		clear: both;
-		content: '';
-		display: block;
 	}
 
-	#main .thumb {
+	.tiles article {
 		float: left;
+	}
+
+		.tiles article > a {
+			padding-top: 50%;
+			margin-top: -1.75em;
+		}
+
+		body:not(.is-touch) .tiles article:hover > .image {
+			-moz-transform: none;
+			-webkit-transform: none;
+			-ms-transform: none;
+			transform: none;
+		}
+
+/* Footer */
+
+	#footer > .inner section {
+		float: left;
+	}
+
+	#footer > .inner .copyright {
+		clear: both;
+		padding-top: 4em;
 	}
