--- a/assets/sass/components/_form.scss
+++ b/assets/sass/components/_form.scss
@@ -1,5 +1,5 @@
 ///
-/// Multiverse by HTML5 UP
+/// Phantom by HTML5 UP
 /// html5up.net | @ajlkn
 /// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 ///
@@ -7,43 +7,65 @@
 /* Form */
 
 	form {
-		margin: 0 0 _size(element-margin) 0;
+		margin: (_size(element-margin) * -0.5) 0 _size(element-margin) 0;
+
+		&:after {
+			content: '';
+			display: block;
+			clear: both;
+			height: 1px;
+		}
 
 		.field {
+			position: relative;
+			float: left;
 			margin: 0 0 (_size(element-margin) * 0.65) 0;
+			vertical-align: top;
+			width: 100%;
+		}
 
-			&.half {
-				float: left;
-				padding: 0 0 0 (_size(element-margin) * 0.325);
-				width: 50%;
+		.half {
+			width: calc(50% + #{_size(field-gutter) * 0.5}) !important;
+			padding-left: _size(field-gutter);
+		}
 
-				&.first {
-					padding: 0 (_size(element-margin) * 0.325) 0 0;
-				}
+		.half.first {
+			width: calc(50% - #{_size(field-gutter) * 0.5}) !important;
+			padding-left: 0;
+		}
+
+		:last-child {
+			margin-bottom: 0;
+		}
+
+		.half:nth-last-child(2) {
+			margin-bottom: 0;
+		}
+
+		.actions {
+			position: relative;
+			clear: both;
+			padding-top: (_size(element-margin) * 0.5);
+		}
+
+		@include breakpoint(xsmall) {
+			.half {
+				width: 100% !important;
+				padding-left: 0;
 			}
-		}
 
-		> .actions {
-			margin: (_size(element-margin) * 0.75) 0 0 0 !important;
-		}
+			.half.first {
+				width: 100% !important;
+				padding-left: 0;
+			}
 
-		@include breakpoint(small) {
-			.field {
-				&.half {
-					float: none;
-					padding: 0;
-					width: 100%;
-
-					&.first {
-						padding: 0;
-					}
-				}
+			.half:nth-last-child(2) {
+				margin: 0 0 (_size(element-margin) * 0.65) 0;
 			}
 		}
 	}
 
 	label {
-		color: _palette(fg-bold);
 		display: block;
 		font-size: 0.9em;
 		font-weight: _font(weight-bold);
@@ -54,18 +76,17 @@
 	input[type="password"],
 	input[type="email"],
 	input[type="tel"],
-	input[type="search"],
-	input[type="url"],
 	select,
 	textarea {
 		@include vendor('appearance', 'none');
-		background: _palette(border-bg);
-		border: 0;
+		background-color: transparent;
+		border: none;
 		border-radius: 0;
-		color: _palette(fg);
+		border-bottom: solid _size(border-width) _palette(border);
+		color: inherit;
 		display: block;
 		outline: 0;
-		padding: 0 1em;
+		padding: 0;
 		text-decoration: none;
 		width: 100%;
 
@@ -74,7 +95,8 @@
 		}
 
 		&:focus {
-			box-shadow: inset 0 0 0 2px _palette(accent1);
+			border-bottom-color: _palette(accent1);
+			box-shadow: inset 0 -1px 0 0 _palette(accent1);
 		}
 	}
 
@@ -105,15 +127,13 @@
 	input[type="text"],
 	input[type="password"],
 	input[type="email"],
-	input[type="tel"],
-	input[type="search"],
-	input[type="url"],
 	select {
 		height: _size(element-height);
 	}
 
 	textarea {
-		padding: 0.75em 1em;
+		padding: 0;
+		min-height: (_size(element-height) * 1.25);
 	}
 
 	input[type="checkbox"],
@@ -138,7 +158,8 @@
 			position: relative;
 
 			&:before {
-				background: _palette(border-bg);
+				border-radius: _size(border-radius);
+				border: solid _size(border-width) _palette(border);
 				content: '';
 				display: inline-block;
 				height: (_size(element-height) * 0.6);
@@ -153,16 +174,17 @@
 
 		&:checked + label {
 			&:before {
-				background: _palette(accent1);
-				border-color: _palette(accent1);
-				color: _palette(fg-bold);
+				background: _palette(fg);
+				border-color: _palette(fg);
+				color: _palette(bg);
 				content: '\f00c';
 			}
 		}
 
 		&:focus + label {
 			&:before {
-				box-shadow: 0 0 0 2px _palette(accent1);
+				border-color: _palette(accent1);
+				box-shadow: 0 0 0 _size(border-width) _palette(accent1);
 			}
 		}
 	}
@@ -170,6 +192,7 @@
 	input[type="checkbox"] {
 		& + label {
 			&:before {
+				border-radius: _size(border-radius);
 			}
 		}
 	}
@@ -180,29 +203,4 @@
 				border-radius: 100%;
 			}
 		}
-	}
-
-	::-webkit-input-placeholder {
-		color: _palette(fg-medium) !important;
-		opacity: 1.0;
-	}
-
-	:-moz-placeholder {
-		color: _palette(fg-medium) !important;
-		opacity: 1.0;
-	}
-
-	::-moz-placeholder {
-		color: _palette(fg-medium) !important;
-		opacity: 1.0;
-	}
-
-	:-ms-input-placeholder {
-		color: _palette(fg-medium) !important;
-		opacity: 1.0;
-	}
-
-	.formerize-placeholder {
-		color: _palette(fg-medium) !important;
-		opacity: 1.0;
 	}
