--- a/assets/sass/ie8.scss
+++ b/assets/sass/ie8.scss
@@ -4,10 +4,20 @@
 @import 'libs/skel';
 
 /*
-	Multiverse by HTML5 UP
+	Phantom by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
+
+/* Form */
+
+	form {
+		.field {
+			float: none !important;
+			width: 100% !important;
+			padding-left: 0 !important;
+		}
+	}
 
 /* Button */
 
@@ -16,39 +26,67 @@
 	input[type="button"],
 	button,
 	.button {
-		border: solid 2px _palette(border);
+		border: solid 2px _palette(fg) !important;
+
+		&:hover {
+			border-color: _palette(accent1) !important;
+		}
 
 		&.special {
-			border: 0;
+			border: none !important;
 		}
 	}
 
-/* Panel */
+/* Tiles */
 
-	.panel {
-		background: _palette(bg);
-		display: none;
-
-		&.active {
-			display: block;
-		}
-
-		> .closer {
-			&:before {
-				content: '\00d7';
-				font-size: 42px;
+	.tiles {
+		article {
+			> .image {
+				&:before, &:after {
+					display: none;
+				}
 			}
 		}
 	}
 
-/* Main */
+/* Header */
 
-	#main {
-		.thumb {
-			> h2 {
-				text-align: center;
-				width: 100%;
-				left: 0;
+	#header {
+		.logo {
+			.symbol {
+				display: none;
+			}
+		}
+
+		nav {
+			ul {
+				li {
+					a[href="#menu"] {
+						text-indent: 0;
+						width: auto;
+						font-size: 0.8em;
+
+						&:before, &:after {
+							display: none;
+						}
+					}
+				}
+			}
+		}
+	}
+
+/* Footer */
+
+	#footer {
+		> .inner {
+			section {
+				width: 50%;
+				margin-left: 3em;
+
+				&:first-child {
+					margin-left: 0;
+					width: 40%;
+				}
 			}
 		}
 	}
