--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -3,10 +3,10 @@
 @import 'libs/mixins';
 @import 'libs/skel';
 @import 'font-awesome.min.css';
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,400italic');
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,700,900');
 
 /*
-	Multiverse by HTML5 UP
+	Phantom by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
@@ -16,23 +16,29 @@
 		large: '(max-width: 1280px)',
 		medium: '(max-width: 980px)',
 		small: '(max-width: 736px)',
-		xsmall: '(max-width: 480px)'
+		xsmall: '(max-width: 480px)',
+		xxsmall: '(max-width: 360px)'
 	));
 
 	@include skel-layout((
 		reset: 'full',
-		boxModel: 'border'
+		boxModel: 'border',
+		grid: (
+			gutters: 2em
+		),
+		breakpoints: (
+			medium: (
+				grid: (
+					gutters: 1.5em
+				)
+			),
+			small: (
+				grid: (
+					gutters: 1em
+				)
+			)
+		)
 	));
-
-	@include keyframes(spinner) {
-		0% {
-			@include vendor('transform', 'rotate(0deg)');
-		}
-
-		100% {
-			@include vendor('transform', 'rotate(359deg)');
-		}
-	}
 
 // Base.
 
@@ -41,17 +47,20 @@
 
 // Component.
 
-	@import 'components/button';
-	@import 'components/form';
+	@import 'components/section';
 	@import 'components/icon';
 	@import 'components/list';
+	@import 'components/form';
+	@import 'components/box';
+	@import 'components/image';
 	@import 'components/table';
-	@import 'components/panel';
-	@import 'components/poptrox-popup';
+	@import 'components/button';
+	@import 'components/tiles';
 
 // Layout.
 
-	@import 'layout/wrapper';
 	@import 'layout/header';
+	@import 'layout/menu';
 	@import 'layout/main';
 	@import 'layout/footer';
+	@import 'layout/wrapper';
