new htmlUP template
multiverse again

--- a/assets/css/ie9.css
+++ b/assets/css/ie9.css
@@ -1,40 +1,41 @@
 /*
-	Phantom by HTML5 UP
+	Multiverse by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/* Tiles */
+/* Panel */
 
-	.tiles:after {
+	.panel > .inner.split:after {
+		clear: both;
 		content: '';
 		display: block;
-		clear: both;
 	}
 
-	.tiles article {
+	.panel > .inner.split > div {
 		float: left;
+		margin-left: 0;
+		padding-left: 0;
 	}
 
-		.tiles article > a {
-			padding-top: 50%;
-			margin-top: -1.75em;
-		}
-
-		body:not(.is-touch) .tiles article:hover > .image {
-			-moz-transform: none;
-			-webkit-transform: none;
-			-ms-transform: none;
-			transform: none;
-		}
-
-/* Footer */
-
-	#footer > .inner section {
-		float: left;
+	.panel > .inner.split > :first-child {
+		padding-left: 0;
 	}
 
-	#footer > .inner .copyright {
+/* Wrapper */
+
+	#wrapper:before {
+		display: none;
+	}
+
+/* Main */
+
+	#main:after {
 		clear: both;
-		padding-top: 4em;
+		content: '';
+		display: block;
+	}
+
+	#main .thumb {
+		float: left;
 	}
