--- a/assets/sass/ie9.scss
+++ b/assets/sass/ie9.scss
@@ -4,49 +4,53 @@
 @import 'libs/skel';
 
 /*
-	Phantom by HTML5 UP
+	Multiverse by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/* Tiles */
+/* Panel */
 
-	.tiles {
-		&:after {
-			content: '';
-			display: block;
-			clear: both;
-		}
+	.panel {
+		> .inner {
+			&.split {
+				&:after {
+					clear: both;
+					content: '';
+					display: block;
+				}
 
-		article {
-			float: left;
+				> div {
+					float: left;
+					margin-left: 0;
+					padding-left: 0;
+				}
 
-			> a {
-				padding-top: 50%;
-				margin-top: -1.75em;
-			}
-
-			body:not(.is-touch) & {
-				&:hover {
-					> .image {
-						@include vendor('transform', 'none');
-					}
+				> :first-child {
+					padding-left: 0;
 				}
 			}
 		}
 	}
 
-/* Footer */
+/* Wrapper */
 
-	#footer {
-		> .inner {
-			section {
-				float: left;
-			}
+	#wrapper {
+		&:before {
+			display: none;
+		}
+	}
 
-			.copyright {
-				clear: both;
-				padding-top: (_size(element-margin) * 2);
-			}
+/* Main */
+
+	#main {
+		&:after {
+			clear: both;
+			content: '';
+			display: block;
+		}
+
+		.thumb {
+			float: left;
 		}
 	}
