--- a/assets/sass/base/_page.scss
+++ b/assets/sass/base/_page.scss
@@ -1,5 +1,5 @@
 ///
-/// Phantom by HTML5 UP
+/// Multiverse by HTML5 UP
 /// html5up.net | @ajlkn
 /// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 ///
@@ -26,9 +26,18 @@
 	body {
 		background: _palette(bg);
 
-		// Prevents animation/transition "flicker" on page load.
+		// Prevents animation/transition "flicker" on page load and triggers various
+		// on-load animations when removed. Automatically added/removed by js/main.js.
+			&.loading {
+				*, *:before, *:after {
+					@include vendor('animation', 'none !important');
+					@include vendor('transition', 'none !important');
+				}
+			}
+
+		// Prevents animation/transition "flicker" on resize.
 		// Automatically added/removed by js/main.js.
-			&.is-loading {
+			&.resizing {
 				*, *:before, *:after {
 					@include vendor('animation', 'none !important');
 					@include vendor('transition', 'none !important');
