--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -1,5 +1,5 @@
 ///
-/// Phantom by HTML5 UP
+/// Multiverse by HTML5 UP
 /// html5up.net | @ajlkn
 /// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 ///
@@ -9,27 +9,24 @@
 	body, input, select, textarea {
 		color: _palette(fg);
 		font-family: _font(family);
-		font-size: 16pt;
+		font-size: 15pt;
 		font-weight: _font(weight);
-		line-height: 1.75;
+		letter-spacing: _font(kerning);
+		line-height: 1.65;
 
 		@include breakpoint(xlarge) {
-			font-size: 14pt;
-		}
-
-		@include breakpoint(large) {
-			font-size: 12pt;
+			font-size: 11pt;
 		}
 	}
 
 	a {
 		@include vendor('transition', (
-			'border-bottom-color #{_duration(transition)} ease',
-			'color #{_duration(transition)} ease'
+			'color #{_duration(transition)} ease-in-out',
+			'border-bottom-color #{_duration(transition)} ease-in-out'
 		));
+		border-bottom: dotted 1px;
+		color: _palette(accent1);
 		text-decoration: none;
-		color: _palette(fg);
-		border-bottom: dotted 1px transparentize(_palette(fg), 0.5);
 
 		&:hover {
 			border-bottom-color: transparent;
@@ -50,67 +47,42 @@
 		margin: 0 0 _size(element-margin) 0;
 	}
 
-	h1 {
-		font-size: 2.75em;
+	h1, h2, h3, h4, h5, h6 {
 		color: _palette(fg-bold);
-		font-weight: _font(weight-bold-alt);
-		line-height: 1.3;
+		font-weight: _font(weight-bold);
+		letter-spacing: _font(kerning-alt);
+		line-height: 1.5;
 		margin: 0 0 (_size(element-margin) * 0.5) 0;
-		letter-spacing: _font(letter-spacing-alt);
+		text-transform: uppercase;
 
 		a {
 			color: inherit;
-		}
-
-		@include breakpoint(small) {
-			font-size: 2em;
-			margin: 0 0 (_size(element-margin) * 0.5) 0;
-		}
-
-		@include breakpoint(xxsmall) {
-			font-size: 1.75em;
+			text-decoration: none;
 		}
 	}
 
-	h2, h3, h4, h5, h6 {
-		color: _palette(fg-bold);
-		font-weight: _font(weight-bold);
-		line-height: 1.5;
-		margin: 0 0 (_size(element-margin) * 1) 0;
-		text-transform: uppercase;
-		letter-spacing: _font(letter-spacing);
-
-		a {
-			color: inherit;
-		}
+	h1 {
+		font-size: 2em;
 	}
 
 	h2 {
-		font-size: 1.1em;
+		font-size: 1.25em;
 	}
 
 	h3 {
-		font-size: 1em;
+		font-size: 1.1em;
 	}
 
 	h4 {
-		font-size: 0.8em;
+		font-size: 1em;
 	}
 
 	h5 {
-		font-size: 0.8em;
+		font-size: 0.9em;
 	}
 
 	h6 {
-		font-size: 0.8em;
-	}
-
-	@include breakpoint(medium) {
-		h1, h2, h3, h4, h5, h6 {
-			br {
-				display: none;
-			}
-		}
+		font-size: 0.7em;
 	}
 
 	@include breakpoint(small) {
@@ -119,7 +91,19 @@
 		}
 
 		h3 {
+			font-size: 0.9em;
+		}
+
+		h4 {
 			font-size: 0.8em;
+		}
+
+		h5 {
+			font-size: 0.7em;
+		}
+
+		h6 {
+			font-size: 0.7em;
 		}
 	}
 
@@ -136,7 +120,7 @@
 	}
 
 	blockquote {
-		border-left: solid (_size(border-width) * 4) _palette(border);
+		border-left: 4px _palette(border);
 		font-style: italic;
 		margin: 0 0 _size(element-margin) 0;
 		padding: (_size(element-margin) / 4) 0 (_size(element-margin) / 4) _size(element-margin);
@@ -144,8 +128,7 @@
 
 	code {
 		background: _palette(border-bg);
-		border-radius: _size(border-radius);
-		border: solid _size(border-width) _palette(border);
+		border: solid 1px _palette(border);
 		font-family: _font(family-fixed);
 		font-size: 0.9em;
 		margin: 0 0.25em;
@@ -168,7 +151,7 @@
 
 	hr {
 		border: 0;
-		border-bottom: solid _size(border-width) _palette(border);
+		border-bottom: solid 1px _palette(border);
 		margin: _size(element-margin) 0;
 
 		&.major {
