--- a/assets/sass/components/_form.scss
+++ b/assets/sass/components/_form.scss
@@ -1,5 +1,5 @@
 ///
-/// Phantom by HTML5 UP
+/// Multiverse by HTML5 UP
 /// html5up.net | @ajlkn
 /// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 ///
@@ -7,65 +7,43 @@
 /* Form */
 
 	form {
-		margin: (_size(element-margin) * -0.5) 0 _size(element-margin) 0;
-
-		&:after {
-			content: '';
-			display: block;
-			clear: both;
-			height: 1px;
-		}
+		margin: 0 0 _size(element-margin) 0;
 
 		.field {
-			position: relative;
-			float: left;
 			margin: 0 0 (_size(element-margin) * 0.65) 0;
-			vertical-align: top;
-			width: 100%;
-		}
 
-		.half {
-			width: calc(50% + #{_size(field-gutter) * 0.5}) !important;
-			padding-left: _size(field-gutter);
-		}
+			&.half {
+				float: left;
+				padding: 0 0 0 (_size(element-margin) * 0.325);
+				width: 50%;
 
-		.half.first {
-			width: calc(50% - #{_size(field-gutter) * 0.5}) !important;
-			padding-left: 0;
-		}
-
-		:last-child {
-			margin-bottom: 0;
-		}
-
-		.half:nth-last-child(2) {
-			margin-bottom: 0;
-		}
-
-		.actions {
-			position: relative;
-			clear: both;
-			padding-top: (_size(element-margin) * 0.5);
-		}
-
-		@include breakpoint(xsmall) {
-			.half {
-				width: 100% !important;
-				padding-left: 0;
+				&.first {
+					padding: 0 (_size(element-margin) * 0.325) 0 0;
+				}
 			}
+		}
 
-			.half.first {
-				width: 100% !important;
-				padding-left: 0;
-			}
+		> .actions {
+			margin: (_size(element-margin) * 0.75) 0 0 0 !important;
+		}
 
-			.half:nth-last-child(2) {
-				margin: 0 0 (_size(element-margin) * 0.65) 0;
+		@include breakpoint(small) {
+			.field {
+				&.half {
+					float: none;
+					padding: 0;
+					width: 100%;
+
+					&.first {
+						padding: 0;
+					}
+				}
 			}
 		}
 	}
 
 	label {
+		color: _palette(fg-bold);
 		display: block;
 		font-size: 0.9em;
 		font-weight: _font(weight-bold);
@@ -76,17 +54,18 @@
 	input[type="password"],
 	input[type="email"],
 	input[type="tel"],
+	input[type="search"],
+	input[type="url"],
 	select,
 	textarea {
 		@include vendor('appearance', 'none');
-		background-color: transparent;
-		border: none;
+		background: _palette(border-bg);
+		border: 0;
 		border-radius: 0;
-		border-bottom: solid _size(border-width) _palette(border);
-		color: inherit;
+		color: _palette(fg);
 		display: block;
 		outline: 0;
-		padding: 0;
+		padding: 0 1em;
 		text-decoration: none;
 		width: 100%;
 
@@ -95,8 +74,7 @@
 		}
 
 		&:focus {
-			border-bottom-color: _palette(accent1);
-			box-shadow: inset 0 -1px 0 0 _palette(accent1);
+			box-shadow: inset 0 0 0 2px _palette(accent1);
 		}
 	}
 
@@ -127,13 +105,15 @@
 	input[type="text"],
 	input[type="password"],
 	input[type="email"],
+	input[type="tel"],
+	input[type="search"],
+	input[type="url"],
 	select {
 		height: _size(element-height);
 	}
 
 	textarea {
-		padding: 0;
-		min-height: (_size(element-height) * 1.25);
+		padding: 0.75em 1em;
 	}
 
 	input[type="checkbox"],
@@ -158,8 +138,7 @@
 			position: relative;
 
 			&:before {
-				border-radius: _size(border-radius);
-				border: solid _size(border-width) _palette(border);
+				background: _palette(border-bg);
 				content: '';
 				display: inline-block;
 				height: (_size(element-height) * 0.6);
@@ -174,17 +153,16 @@
 
 		&:checked + label {
 			&:before {
-				background: _palette(fg);
-				border-color: _palette(fg);
-				color: _palette(bg);
+				background: _palette(accent1);
+				border-color: _palette(accent1);
+				color: _palette(fg-bold);
 				content: '\f00c';
 			}
 		}
 
 		&:focus + label {
 			&:before {
-				border-color: _palette(accent1);
-				box-shadow: 0 0 0 _size(border-width) _palette(accent1);
+				box-shadow: 0 0 0 2px _palette(accent1);
 			}
 		}
 	}
@@ -192,7 +170,6 @@
 	input[type="checkbox"] {
 		& + label {
 			&:before {
-				border-radius: _size(border-radius);
 			}
 		}
 	}
@@ -203,4 +180,29 @@
 				border-radius: 100%;
 			}
 		}
+	}
+
+	::-webkit-input-placeholder {
+		color: _palette(fg-medium) !important;
+		opacity: 1.0;
+	}
+
+	:-moz-placeholder {
+		color: _palette(fg-medium) !important;
+		opacity: 1.0;
+	}
+
+	::-moz-placeholder {
+		color: _palette(fg-medium) !important;
+		opacity: 1.0;
+	}
+
+	:-ms-input-placeholder {
+		color: _palette(fg-medium) !important;
+		opacity: 1.0;
+	}
+
+	.formerize-placeholder {
+		color: _palette(fg-medium) !important;
+		opacity: 1.0;
 	}
