--- a/assets/sass/components/_list.scss
+++ b/assets/sass/components/_list.scss
@@ -1,5 +1,5 @@
 ///
-/// Phantom by HTML5 UP
+/// Multiverse by HTML5 UP
 /// html5up.net | @ajlkn
 /// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 ///
@@ -30,7 +30,7 @@
 			padding-left: 0;
 
 			li {
-				border-top: solid _size(border-width) _palette(border);
+				border-top: solid 1px _palette(border);
 				padding: 0.5em 0;
 
 				&:first-child {
@@ -44,11 +44,22 @@
 			cursor: default;
 			list-style: none;
 			padding-left: 0;
-			margin: -1em 0 _size(element-margin) -1em;
 
 			li {
 				display: inline-block;
-				padding: 1em 0 0 1em;
+				padding: 0 1em 0 0;
+
+				&:last-child {
+					padding-right: 0;
+				}
+
+				.icon {
+					color: _palette(fg-light);
+
+					&:before {
+						font-size: 1.5em;
+					}
+				}
 			}
 		}
 
