--- a/css/main.css
+++ b/css/main.css
@@ -419,7 +419,7 @@ body {width: 92%; margin: 0 auto} /* Center page without wrapper */
   display:inline-block;
   margin: 0 10px 10px 0;    
   padding: 14px 20px;  
-  background: #28A8A8;
+  background: #186464;
   color: #fff;
   font-weight: bold;
   font-size: 13px;
@@ -526,51 +526,51 @@ body {width: 92%; margin: 0 auto} /* Center page without wrapper */
   margin-left: 4px;
   color: #fff;
 }
-/* .meter > span:after, .animate > span > span { */
-  /* content: ""; */
-  /* position: absolute; */
-  /* top: 0; left: 0; bottom: 0; right: 0; */
-  /* background-image:  */
-  /* -webkit-gradient(linear, 0 0, 100% 100%,  */
-    /* color-stop(.25, rgba(255, 255, 255, .2)),  */
-    /* color-stop(.25, transparent), color-stop(.5, transparent),  */
-    /* color-stop(.5, rgba(255, 255, 255, .2)),  */
-    /* color-stop(.75, rgba(255, 255, 255, .2)),  */
-    /* color-stop(.75, transparent), to(transparent) */
-    /* ); */
-  /* background-image:  */
-  /* -moz-linear-gradient( */
-    /* -45deg,  */
-    /* rgba(255, 255, 255, .2) 25%,  */
-    /* transparent 25%,  */
-    /* transparent 50%,  */
-    /* rgba(255, 255, 255, .2) 50%,  */
-    /* rgba(255, 255, 255, .2) 75%,  */
-    /* transparent 75%,  */
-    /* transparent */
-    /* ); */
-  /* z-index: 1; */
-  /* -webkit-background-size: 50px 50px; */
-  /* -moz-background-size: 50px 50px; */
-  /* -webkit-animation: move 2s linear infinite; */
-  /* -webkit-border-top-right-radius: 8px; */
-  /* -webkit-border-bottom-right-radius: 8px; */
-  /* -moz-border-radius-topright: 8px; */
-  /* -moz-border-radius-bottomright: 8px; */
-  /* border-top-right-radius: 8px; */
-  /* border-bottom-right-radius: 8px; */
-  /* -webkit-border-top-left-radius: 20px; */
-  /* -webkit-border-bottom-left-radius: 20px; */
-  /* -moz-border-radius-topleft: 20px; */
-  /* -moz-border-radius-bottomleft: 20px; */
-  /* border-top-left-radius: 20px; */
-  /* border-bottom-left-radius: 20px; */
-  /* overflow: hidden; */
-/* } */
+.meter > span:after, .animate > span > span {
+  content: "";
+  position: absolute;
+  top: 0; left: 0; bottom: 0; right: 0;
+  background-image: 
+  -webkit-gradient(linear, 0 0, 100% 100%, 
+    color-stop(.25, rgba(255, 255, 255, .2)), 
+    color-stop(.25, transparent), color-stop(.5, transparent), 
+    color-stop(.5, rgba(255, 255, 255, .2)), 
+    color-stop(.75, rgba(255, 255, 255, .2)), 
+    color-stop(.75, transparent), to(transparent)
+    );
+  background-image: 
+  -moz-linear-gradient(
+    -45deg, 
+    rgba(255, 255, 255, .2) 25%, 
+    transparent 25%, 
+    transparent 50%, 
+    rgba(255, 255, 255, .2) 50%, 
+    rgba(255, 255, 255, .2) 75%, 
+    transparent 75%, 
+    transparent
+    );
+  z-index: 1;
+  -webkit-background-size: 50px 50px;
+  -moz-background-size: 50px 50px;
+  -webkit-animation: move 2s linear infinite;
+  -webkit-border-top-right-radius: 8px;
+  -webkit-border-bottom-right-radius: 8px;
+  -moz-border-radius-topright: 8px;
+  -moz-border-radius-bottomright: 8px;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+  -webkit-border-top-left-radius: 20px;
+  -webkit-border-bottom-left-radius: 20px;
+  -moz-border-radius-topleft: 20px;
+  -moz-border-radius-bottomleft: 20px;
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
+  overflow: hidden;
+}
 
-/* .animate > span:after { */
-  /* display: none; */
-/* } */
+.animate > span:after {
+  display: none;
+}
 
 @-webkit-keyframes move {
   0% {
